potential fix to css width on mobile

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -24,6 +24,7 @@ html {
   background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
     url("../img/hero.jpg");
   height: 400px;
+  width: 100%;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -43,6 +44,7 @@ html {
 #about {
   background-color: #d3d3d3;
   height: 800px;
+  width: 100%;
 }
 
 #code {
@@ -77,7 +79,7 @@ html {
 
 #projects {
   margin: auto;
-  width: 50%;
+  width: 100%;
   background-color: #ffffff;
   padding-left: 75px;
 }
